Fixes misaligned header in writes/

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -156,6 +156,9 @@ $footer-size-alt: 28px;
  * /writes
  ******************************/
 post-item {
+    h2 {
+        margin-top: 0px;
+    }
     p {
         @include media-min($screen-sm-min) {
             font-size: 22px;
